# dgit

./: .gitignore  README.md  nip.code-workspace  vs.code-workspace
dapp/: Makefile  hardhat.config.js  package.json
dapp/contracts/: Greeter.sol
dapp/scripts/: sample-script.js
dgit-cli/: Cargo.toml  Makefile
dgit-cli/src/: address.rs  issue.rs  main.rs  meta.rs
git-remote-ipfs/: Cargo.toml
git-remote-ipfs/src/: address.rs  main.rs  object.rs  ref_parse.rs  repo.rs  test_url.rs  wallet_connect.rs
git-remote-ipfs/src/abi/contracts/Greeter.sol/: Greeter.json
git-remte-ipfs/: Cargo.toml
wapp/: package-lock.json  package.json
wapp/src/: App.js
webapp/: package-lock.json  package.json  vite.config.ts
webapp/src/: App.tsx  main.tsx  routes.tsx
webapp/src/components/: Header.tsx
webapp/src/pages/: Code.tsx  _layout.tsx  index.tsx
webapp2/: address.ts  package.json
webapp2/abi/contracts/Greeter.sol/: Greeter.json
webapp2/components/: Header.tsx  Layout.tsx
webapp2/hooks/: use-ipfs-factory.ts
webapp2/pages/: Code.tsx  Issue.tsx  _app.tsx  index.tsx
