[package]
name = "git-remote-ipfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.9.0"
walletconnect = { git = "https://github.com/buhe/walletconnect-rs", features = ["qr", "transport"]}
git2 = "0.13"
tokio = { version = "1", features = ["full"] }
ipfs-api-backend-hyper = "0.4"
web3 = "0.18.0"